<resources>
    <string name="app_name">青梦阅读</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="jump">跳过</string>
    <string name="lue">跳过</string>
    <string name="battery">battery</string>
    <string name="background">bkg</string>
    <string name="startimg">startImg</string>
    <string name="book_city">书城</string>
    <string name="book_shelf">书架</string>
    <string name="user">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter">开始体验</string>
    <string name="dot1">point</string>
    <string name="dot2">point2</string>
    <string name="dot3">point3</string>
    <string name="search">搜索</string>
    <string name="qr">QR</string>
    <string name="selection">精选</string>
    <string name="lady">女生</string>
    <string name="boy">男生</string>
    <string name="listen">听书</string>
    <string name="publish">出版</string>
    <string name="bookshelf">书架</string>
    <string name="more_point">more</string>
    <string name="bgr_time">bgr</string>
    <string name="time">time</string>
    <string name="read">今日已读</string>
    <string name="unwritten">0</string>
    <string name="min">分钟</string>
    <string name="edit">编辑</string>
    <string name="no_book">no_book</string>
    <string name="add_book">暂无书籍，点击添加</string>
    <string name="no_message">暂时没有新消息</string>
    <string name="import_book">智能导入</string>
    <string name="check">check</string>
    <string name="check_all">全选</string>
    <string name="addToBookshelf">加入书架</string>
    <string name="exam_file_name">例子的书名</string>
    <string name="exam_txt">TXT</string>
    <string name="exam_size">21.9MB</string>
    <string name="exam_time">2021–01–01</string>
    <string name="input">请输入</string>
    <string name="scan_file">开始扫描</string>
    <string name="bookCover">书籍封面</string>
    <string name="bookintroduce">bookIntroduce</string>
    <string name="bat">电量</string>
    <string name="back">返回</string>
    <string name="menu">更多</string>
    <string name="catalogue">目录</string>
    <string name="moon">夜间</string>
    <string name="font_decline">A-</string>
    <string name="a_plus">A+</string>
    <string name="readbackground">背景</string>
    <string name="fontSize">字号</string>
    <string name="settingMore">更多设置</string>
    <string name="continueRead">书城</string>
    <string name="title_activity_moreset">MoresetActivity</string>
    <string name="moreset">更多设置</string>
    <string name="lineHigh">行间距</string>
    <string name="voiceturn">音量键翻页</string>
    <string name="locktime">锁屏时间</string>
    <string name="systemtime">系统时间</string>
    <string name="chooseAllBook">全选</string>
    <string name="complete">完成</string>
    <string name="allBooks">全部书籍</string>
    <string name="hasChoose">已选择0本书</string>
    <string name="msg">msg</string>
    <string name="head">头像</string>
    <string name="hour">小时</string>
    <string name="hasRead">累计读</string>
    <string name="usually_function">常用功能</string>
    <string name="myBooks">我的书籍</string>
    <string name="interaction">我的互动</string>
    <string name="feedback">帮助与反馈</string>
    <string name="no_msg">无新消息</string>
    <string name="中">middle</string>
    <string name="大">big</string>
    <string name="小">min</string>
    <string name="note">笔记</string>
    <string name="categroy">目录</string>
    <string name="example_name">姜饼麻子</string>
    <string name="login_register">登录/注册</string>
    <string name="register">注册</string>
    <string name="init_num">0</string>
    <string name="my_message">我的消息</string>
    <string name="person_info">个人信息</string>
    <string name="headportrait">头像</string>
    <string name="edit_message">编辑资料</string>
    <string name="example_userName">努力上进的小松鼠</string>
    <string name="example_introduce">介绍一下自己吧</string>
    <string name="reading_time">阅读时长</string>
    <string name="books_number">书籍数量</string>
    <string name="stateful">动态</string>
    <string name="no_state">暂时没有动态</string>
    <string name="edit_personInfo">编辑个人资料</string>
    <string name="save">保存</string>
    <string name="nickName">昵称</string>
    <string name="sex">性别</string>
    <string name="birth">生日</string>
    <string name="introduce">签名</string>
    <string name="not_set">未设置</string>
    <string name="no_choice">暂不选择</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="clear_storage">清除缓存</string>
    <string name="clear">清除缓存</string>
    <string name="account">账号与安全</string>
    <string name="login_out">退出登录</string>
    <string name="secret">隐私管理</string>
    <string name="check_update">检查更新</string>
    <string name="about_qingmeng_reading">关于青梦阅读</string>
    <string name="help_feedback">反馈与帮助</string>
    <string name="common_problem">常见问题</string>
    <string name="import_books">导入书籍问题</string>
    <string name="set_help">夜间模式/字号大小/阅读设置</string>
    <string name="clear_storage_help">如何清除缓存</string>
    <string name="change_nickname">如何修改昵称/头像</string>
    <string name="check_note">怎么查看目录/书签</string>
    <string name="feedback_history">反馈历史</string>
    <string name="feedback_help">意见反馈</string>
    <string name="account_safe">账号与安全</string>
    <string name="none">暂无</string>
    <string name="mobile">手机号</string>
    <string name="account_help">账号帮助</string>
    <string name="secretSetting">隐私设置</string>
    <string name="hide_msg">隐藏个人信息</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="hide_msg_text">我们将会根据你的需求为你隐藏你的个人信息情况，为此他人可能不能查看关于你的信息。</string>
    <string name="show_msg">如打开该开关，意味着你的信息将处于公开状态，仅限关于阅读的相关信息，他人可以查看你的信息。</string>
    <string name="special_introduce">个性化推荐</string>
    <string name="show_introduce">我们将会根据你的阅读书籍喜好，向你推荐一些类似的书籍，为你的阅读增加更多选择和体验。</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about">关于</string>
    <string name="appName">青梦阅读</string>
    <string name="version">版本1.0.0</string>
    <string name="detail_msg">欢迎您使用“青梦阅读小说”软件服务，此版本适用于Android操作系统（建议1.6以上固件），
        对于在使用本软件过程中，出现的任何问题，欢迎小伙伴关注下方联系方式或者软件中的反馈入口，向我们提供意见和帮助信息。</string>
    <string name="detail_msg1">温馨提示：本软件系指应届毕业生黄志群本科论文设计阶段编写，尚处于研发阶段，相关技术不是很成熟，可能给用户带来不好体验，敬请谅解。</string>
    <string name="QQ">营销QQ: 1281909574</string>
    <string name="phone">联系电话：18296618949</string>
    <string name="if_clear_data">是否确认清除缓存?</string>
    <string name="opinion_feedback">意见反馈</string>
    <string name="upload">提交</string>
    <string name="edit_question">请输入你遇到的问题或意见(不少于10字)</string>
    <string name="original_show">0/300</string>
    <string name="record">%1$d/300</string>
    <string name="image_description">添加图片说明（选填）</string>
    <string name="image_num">0/4</string>
    <string name="add_image">添加图片</string>
    <string name="check_num">已选择%d本书</string>
    <string name="all_type">全部格式</string>
    <string name="txt">Txt</string>
    <string name="other">其他</string>
    <string name="file_manage">文件管理</string>
    <string name="select">选中</string>
    <string name="get_permission_write_external_storage">应用需保存运行状态等信息，需要获取读写手机存储（系统提示为访问设备上的照片、媒体内容和文件）权限，请允许。</string>
    <string name="read_set">阅读页设置</string>
    <string name="font_size">19</string>
    <string name="light">亮度</string>
    <string name="night">夜晚模式</string>
    <string name="percent">%</string>
    <string name="zero">0.00%</string>
    <string name="previous_chapter">上一章</string>
    <string name="next_chapter">下一章</string>
    <string name="b">%dB</string>
    <string name="checkNumber">已选择%d本书</string>
    <string name="delete">删除</string>
    <string name="delete_book">删除书籍</string>
    <string name="take_photo">拍照</string>
    <string name="select_from_album">从相册中选择</string>
    <string name="right">右边</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="dispose_account">注销账号</string>
    <string name="dispose_tip">为保证你的账号安全，在你提交的注销账号生效前，需认真阅读以下信息</string>
    <string name="point1">1.注销账号为不可恢复的操作，即使你使用相同的手机号绑定小说账号也将会是不同的账号，请仔细考虑后再完成你的决定.</string>
    <string name="point2">2.注销小说账号，您将无法继续再使用本账号，也将无法找回与账号相关的任何内容或信息。</string>
    <string name="point3">3.建议你在注销前自行备份小说账号相关的所有信息，注销成功后我们将删除你的个人信息。</string>
    <string name="point4">我已阅读并同意以上信息</string>
    <string name="_86">+86</string>
    <string name="pwd">密码</string>
    <string name="message_tip">消息提示</string>
    <string name="close">关闭</string>
    <string name="idea">想法</string>
    <string name="all_comments">全部评论</string>
    <string name="hint_comment">有趣想法总是那么多</string>
    <string name="tip">我也来一条</string>
    <string name="user_name">用户10001</string>
    <string name="up_time">2022年1月1日</string>
    <string name="Praise_number">点赞数</string>
    <string name="edit_book">编辑书籍</string>
    <string name="get_book">导入书籍</string>
    <string name="update_remind">更新提醒</string>
    <string name="remind_text">连载更新提醒</string>
    <string name="remind_option">开启后及时获得书籍更新提醒</string>
    <string name="last_tip">上回读到</string>
    <string name="continue_reading">继续阅读</string>
    <string name="search_book">搜索你想要的</string>
    <string name="search_history">搜索历史</string>
    <string name="delete_all">清空</string>
    <string name="search_example">特战荣耀(杨洋、李一桐主演)</string>
    <string name="change_word">换一换</string>
    <string name="dou">斗罗</string>
    <string name="tuPo">我的师傅每到大限才突破</string>
    <string name="search_hotWord">搜索热词</string>
    <string name="add_bookmark">添加书签</string>
    <string name="search_in_book">全文搜索</string>
    <string name="share_book">分享本书</string>
    <string name="import_book_question">本地书功能支持将手机中存储的txt文件传入书架，具体操作如下：点击主界面下的文件管理模块，
        点击右上角的【…】-【TXT】，或者点击该页面的扫描按钮根据得到的结果自行选择添加书籍。</string>
    <string name="reading_setting_help">您好，可以在小说阅读页单击屏幕中部，调出菜单设置栏，点击下方的【夜间】，即可开启夜间模式；
        同时在菜单栏中点击字号调整按钮改变字体大小；您还可以查看并尝试点击菜单栏中其他按钮更改阅读设置。</string>
    <string name="change_head_help">您好，请到【我的】页面，点击页面上方的【登录/注册】进入账号注册页面，
        输入相关信息完成注册后返回【我的】页面，再次点击进入个人主页，点击右上角【编辑资料】,即可修改信息。</string>
    <string name="check_catalogue1">1.点击阅读页面中部调出菜单栏后，点击下方左下角的【目录】按钮进入目录详情页</string>
    <string name="check_catalogue2">2.在目录详情页面点击上方的标签，或者左右滑动，即可查看目录和书签</string>
    <attr name="mainBackground" format="color|reference" />
</resources>