<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:paddingVertical="@dimen/dp_10"
    android:paddingHorizontal="@dimen/dp_10">

    <TextView
        android:id="@+id/tv_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_tip"
        android:textColor="@color/black_500"
        android:textSize="@dimen/sp_16"/>
    <ImageView
        android:id="@+id/iv_dismiss"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:src="@mipmap/cancel"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/cancel"/>
    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_60"
        android:src="@mipmap/note_cover"
        android:layout_below="@+id/tv_01"
        android:layout_marginTop="@dimen/dp_10"
        android:contentDescription="@string/bookCover" />
    <TextView
        android:id="@+id/tv_bookName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/sp_18"
        android:layout_toEndOf="@+id/iv_cover"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_15"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_reading"
        android:backgroundTint="@color/white"
        android:textColor="@color/green_4"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_40"/>

</RelativeLayout>