<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingModule.user_setting_page.AboutActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_15"
        android:gravity="start">
        <ImageView
            android:id="@+id/iv_backToSet"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:contentDescription="@string/back"
            android:src="@mipmap/back_24px" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/about"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/black"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/grey_b1"
        android:layout_marginTop="@dimen/dp_10"/>
    <ImageView
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/logo_launcher"
        android:contentDescription="@string/about" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:textSize="@dimen/sp_24"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/black_8c"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_15"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_15"
        android:text="@string/detail_msg"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/black_8c"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_15"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_15"
        android:text="@string/detail_msg1"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/black_8c"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_15"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/QQ"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/black_8c" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/phone"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/black_8c" />
</LinearLayout>