<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainViewModule.searchActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/dp_15"
    android:paddingVertical="@dimen/dp_15">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/iv_backTMain"
        android:layout_width="@dimen/dp_25"
        android:layout_height="@dimen/dp_25"
        android:src="@mipmap/back_24px"
        android:contentDescription="@string/back"
        android:layout_marginTop="@dimen/dp_5"/>
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="@dimen/dp_220"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:hint="@string/search_book"
        android:layout_marginStart="@dimen/dp_12"
        android:id="@+id/ed_search"
        android:background="@android:color/transparent"
        android:drawableEnd="@mipmap/cancel"
        android:imeOptions="actionSearch"
        android:maxLines="1"
        android:inputType="text"/>
    <View
        android:layout_width="@dimen/dp_1"
        android:layout_height="@dimen/dp_20"
        android:background="@color/grey_b1"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_10"/>
    <TextView
        android:id="@+id/tv_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="@dimen/sp_18"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_5"/>
</LinearLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_1"
    android:background="@color/grey_b1"
    android:layout_marginTop="@dimen/dp_15"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:id="@+id/rl_history"
    android:layout_marginTop="@dimen/dp_15">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_history"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/font4"/>
    <TextView
        android:id="@+id/tv_clearAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_all"
        android:textSize="@dimen/sp_14"
        android:layout_alignParentEnd="true"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"
        android:layout_below="@+id/tv_clearAll"
        android:layout_marginTop="@dimen/dp_10"
        android:id="@+id/rv_history"/>
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:id="@+id/rl_hot"
        android:layout_marginTop="@dimen/dp_15">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_hotWord"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/font4"/>
        <TextView
            android:id="@+id/tv_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_word"
            android:textSize="@dimen/sp_14"
            android:layout_alignParentEnd="true"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="@dimen/dp_50"
            android:text="@string/search_example"
            android:backgroundTint="@color/white_140"
            android:textColor="@color/font4"
            android:layout_below="@+id/tv_change"
            android:layout_marginTop="@dimen/dp_10"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="@dimen/dp_50"
            android:text="@string/dou"
            android:backgroundTint="@color/white_140"
            android:textColor="@color/font4"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_change"
            android:layout_marginTop="@dimen/dp_10"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="@dimen/dp_50"
            android:text="@string/tuPo"
            android:backgroundTint="@color/white_140"
            android:textColor="@color/font4"
            android:layout_below="@+id/tv_change"
            android:layout_marginTop="@dimen/dp_60"/>
    </RelativeLayout>

</LinearLayout>