<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dp_15"
    tools:context=".SettingModule.user_setting_page.secretActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:gravity="start">
        <ImageView
            android:id="@+id/iv_backToSet"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:contentDescription="@string/back"
            android:src="@mipmap/back_24px" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/secretSetting"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/black"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/hide_msg"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sc_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:checked="false"
            android:longClickable="false"/>
        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/grey_b1"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_below="@+id/sc_msg"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide_msg_text"
            android:textSize="@dimen/sp_16"
            android:textStyle="normal"
            android:layout_below="@+id/line"
            android:layout_marginTop="@dimen/dp_30"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_msg"
            android:textSize="@dimen/sp_16"
            android:textStyle="normal"
            android:layout_below="@+id/line"
            android:layout_marginTop="@dimen/dp_100"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/special_introduce"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sc_introduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:checked="true"
            android:longClickable="false"/>
        <View
            android:id="@+id/line_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/grey_b1"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_below="@+id/sc_introduce"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_introduce"
            android:textSize="@dimen/sp_16"
            android:textStyle="normal"
            android:layout_below="@+id/line_1"
            android:layout_marginTop="@dimen/dp_30"/>

    </RelativeLayout>
</LinearLayout>