<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/dp_15"
    android:orientation="vertical"
    tools:context=".SettingModule.user_setting_page.DisposeAccountActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:gravity="start">
        <ImageView
            android:id="@+id/iv_backToAccount"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back"
            android:src="@mipmap/back_24px" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/dispose_account"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/black"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/dispose_tip"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/point1"
        android:textSize="@dimen/sp_17"
        android:textStyle="normal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/point2"
        android:textSize="@dimen/sp_17"
        android:textStyle="normal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/point3"
        android:textSize="@dimen/sp_17"
        android:textStyle="normal"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_centerVertical="true"
            android:checked="false"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point4"
            android:layout_centerVertical="true"
            android:textSize="@dimen/sp_16"
            android:layout_toEndOf="@+id/cb_agree"/>
    </RelativeLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_dispose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/shape_cor"
        app:backgroundTint="@color/cb"
        android:text="@string/dispose_account"
        android:textSize="@dimen/sp_17"/>
</LinearLayout>