<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white"
    tools:context=".SettingModule.MoreSettingActivity">
    <ImageView
        android:id="@+id/iv_backToRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/back_24px"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_15"
        android:contentDescription="@string/back" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/moreset"
        android:textSize="@dimen/sp_24"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tv_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_backToRead"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_60"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_24"
        android:text="@string/lineHigh"/>
    <ImageButton
        android:id="@+id/ib_one"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_30"
        android:src="@mipmap/multiline"
        android:scaleType="centerInside"
        android:background="@drawable/round_rectangle"
        android:layout_toEndOf="@+id/tv_high"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_100"
        android:contentDescription="@string/小" />
    <ImageButton
        android:id="@+id/ib_two"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_30"
        android:src="@mipmap/lines"
        android:scaleType="centerInside"
        android:background="@drawable/round_rectangle"
        android:layout_toEndOf="@+id/ib_one"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_100"
        android:contentDescription="@string/大" />
    <ImageButton
        android:id="@+id/ib_three"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_30"
        android:src="@mipmap/grip_lines"
        android:scaleType="centerInside"
        android:background="@drawable/round_rectangle"
        android:layout_toEndOf="@+id/ib_two"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_100"
        android:contentDescription="@string/中" />
    <TextView
        android:id="@+id/tv_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_high"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/voiceturn"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_24"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tv_high"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_15"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_500"
        android:layout_below="@+id/tv_voice"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"/>
    <TextView
        android:id="@+id/tv_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_voice"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/locktime"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_24"/>
   <TextView
       android:id="@+id/system"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentEnd="true"
       android:layout_marginEnd="@dimen/dp_40"
       android:layout_marginTop="@dimen/dp_240"
       android:text="@string/systemtime"
       android:textColor="@color/black_500"
       android:textSize="@dimen/sp_18"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/right"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_240"
        android:background="@color/white"
        android:contentDescription="@string/back" />


</RelativeLayout>